--- a/Web-Micro-Services/A02.md
+++ b/Web-Micro-Services/A02.md
@@ -1,1 +1,404 @@
+# **How to Ask Codex to Improve Designs**
+
+## 1. Introduction
+
+Codex is like a **very smart junior engineer** who can read your project, understand patterns, and suggest better designs.
+
+But just like a junior engineer, it works best when you give:
+
+* Clear context
+* Clear goals
+* Clear constraints
+
+In this chapter, we will see **how to talk to Codex** so that it can help you:
+
+* Improve folder structure
+* Clean up API design
+* Simplify database schema
+* Make microservice boundaries clearer
+
+All in **simple, step-by-step language**.
+
+---
+
+## 2. What Do We Mean by “Design”?
+
+When we say “design” here, we mean things like:
+
+1. **Code structure**
+
+   * How files and folders are organized
+   * Where models, routes, services, and tests are kept
+
+2. **API design**
+
+   * How endpoints are named
+   * How requests and responses are structured
+
+3. **Database design**
+
+   * Tables and relationships
+   * Naming and normalization
+
+4. **Microservice design**
+
+   * Which service should do what
+   * How services talk to each other
+
+Codex cannot read your mind, but it **can** work with all of these if you **show it your current design and your target**.
+
+---
+
+## 3. General Formula for Good Codex Prompts
+
+A good “design improvement” prompt generally follows this structure:
+
+> 1. **Context**: What is this project about?
+> 2. **Current state**: Show or describe current structure / code / schema.
+> 3. **Problem**: What feels wrong? (Too complex? Duplicated? Hard to extend?)
+> 4. **Goal**: What do you want instead? (Simpler, more modular, more scalable…)
+> 5. **Constraints**: What must not change? (API contracts, DB schema, etc. if needed)
+> 6. **Output format**: What should Codex return? (new folder tree, updated file, suggestions list, etc.)
+
+If you give these clearly, Codex will behave like a senior reviewer.
+
+---
+
+## 4. Asking Codex to Improve Folder & Module Structure
+
+### 4.1 Real-life analogy
+
+Think of your project like a **house** where:
+
+* Clothes are in the kitchen
+* Utensils are in the bedroom
+* Shoes are in the bathroom
+
+You can live, but it is messy.
+
+You ask an interior designer:
+“Please reorganize everything so that each room has a clear purpose.”
+
+Codex can act as that designer for your **code folders and files**.
+
+---
+
+### 4.2 Example prompt: Improve folder structure
+
+```text
+You are a senior backend architect.
+
+Context:
+I have a FastAPI + SQLAlchemy project for a small e-commerce system.
+Right now my folder structure is very flat and messy.
+
+Current structure:
+- main.py
+- user.py
+- product.py
+- order.py
+- db.py
+- models.py
+- utils.py
+- test_user.py
+- test_product.py
+
+Problem:
+All routes, models, and logic are mixed together.
+It is hard to add new features and to test.
+
+Goal:
+Propose a clean folder structure using these concepts:
+- routers
+- models
+- services (business logic)
+- schemas (Pydantic)
+- tests
+
+Constraints:
+- Keep using FastAPI and SQLAlchemy.
+- Do not change the actual business logic yet, just reorganize structure.
+
+Task:
+1. Propose a new folder tree.
+2. Show which file should contain what.
+3. Suggest a step-by-step plan to migrate from old structure to new structure.
+```
+
+You can then ask:
+
+```text
+Now generate the actual folders and empty files for this structure.
+```
+
+Or:
+
+```text
+Refactor main.py and user.py according to your proposed structure.
+```
+
+---
+
+## 5. Asking Codex to Improve API Design
+
+### 5.1 What is “better” API design?
+
+* Clear, meaningful endpoint names
+* Proper use of HTTP verbs (GET, POST, PUT, DELETE)
+* Consistent response format
+* No duplicated routes
+* Versioning if needed
+
+---
+
+### 5.2 Example: API improvement prompt
+
+```text
+You are an API design expert.
+
+Context:
+I have APIs for managing products and orders in a shop.
+
+Current endpoints:
+GET /getAllProducts
+POST /insertProductRecord
+POST /createNewOrder123
+GET /showOrderList
+
+Problems:
+- Endpoint names are inconsistent.
+- HTTP verbs are not used properly.
+- Hard to guess what each API does.
+
+Goal:
+1. Suggest a clean REST-style design.
+2. Use meaningful endpoint names.
+3. Use GET, POST, PUT, DELETE correctly.
+4. Suggest how to structure request and response bodies.
+
+Constraints:
+- The functionality must remain the same.
+- It is OK to add versioning (/api/v1/...).
+
+Task:
+1. Propose a new list of endpoints with method and path.
+2. For each endpoint, show example request and response JSON.
+3. Explain briefly why your design is better.
+```
+
+You can follow up with:
+
+```text
+Now generate FastAPI route definitions for these improved endpoints.
+```
+
+---
+
+## 6. Asking Codex to Improve Database Design
+
+### 6.1 Typical issues
+
+* Too many columns in one table
+* No proper relationships
+* Repeated data
+* Poor naming
+
+Codex can suggest better table designs if you **show your current schema** and clearly state what bothers you.
+
+---
+
+### 6.2 Example: Database redesign prompt
+
+```text
+You are a database architect.
+
+Context:
+I have this MySQL table storing order information:
+
+CREATE TABLE orders (
+    id INT PRIMARY KEY AUTO_INCREMENT,
+    customer_name VARCHAR(255),
+    customer_email VARCHAR(255),
+    customer_phone VARCHAR(50),
+    product1_id INT,
+    product1_qty INT,
+    product2_id INT,
+    product2_qty INT,
+    product3_id INT,
+    product3_qty INT,
+    total_amount DECIMAL(10,2),
+    payment_status VARCHAR(50),
+    created_at DATETIME
+);
+
+Problems:
+- Customer data is repeated in every order.
+- Product columns are fixed (product1, product2, product3).
+- It is hard to handle more than 3 products.
+
+Goal:
+1. Normalize the schema.
+2. Separate customer and order items.
+3. Make it easy to handle any number of products per order.
+
+Task:
+1. Propose new tables and relationships.
+2. Show CREATE TABLE statements.
+3. Explain briefly why this design is better.
+4. Suggest a migration strategy from the old table.
+```
+
+Then you can say:
+
+```text
+Now generate SQLAlchemy models for the new schema using Python.
+```
+
+---
+
+## 7. Asking Codex to Improve Microservice Boundaries
+
+### 7.1 Real-life analogy
+
+Imagine a large office where **one team** is doing:
+
+* Hiring
+* Payroll
+* IT support
+* Marketing
+
+Everyone is overloaded and confused.
+Better to **split into separate departments**.
+
+In microservices, Codex can help you split a “god service” into:
+
+* User service
+* Billing service
+* Notification service
+* Inventory service
+
+…based on your description.
+
+---
+
+### 7.2 Example: microservice design prompt
+
+```text
+You are a microservice architect.
+
+Context:
+Right now I have a single monolithic FastAPI app for an e-commerce platform.
+It handles:
+- User registration and login
+- Product management
+- Orders
+- Payments
+- Email/SMS notifications
+
+Problem:
+Everything is in one service.
+It is hard to scale, deploy, and maintain.
+
+Goal:
+Propose a microservice architecture with clear boundaries.
+We are okay to start with 4–5 services.
+
+Constraints:
+- We are using Python + FastAPI.
+- We prefer each service to have its own database.
+- Communication can be REST for now.
+- We may add a message queue later.
+
+Task:
+1. Suggest the list of microservices and their responsibilities.
+2. For each service, list main endpoints.
+3. Propose how services will talk to each other (simple REST calls).
+4. Show a simple text diagram of the architecture.
+```
+
+Then you can follow up with:
+
+```text
+Now generate folder structures for each microservice.
+```
+
+---
+
+## 8. Asking Codex for “Before → After” Comparison
+
+Sometimes you want Codex to **compare** your current design and its improved proposal.
+
+You can ask:
+
+```text
+Please compare my current design and your proposed design.
+
+Show:
+1. What is better in the new design.
+2. What trade-offs or disadvantages it has.
+3. A small step-by-step migration plan.
+```
+
+This makes Codex think like a **senior reviewer**, not just a code generator.
+
+---
+
+## 9. Asking Codex to Respect Constraints
+
+Very important: **tell Codex what it must not break**.
+
+Examples of constraints:
+
+* “Do not change existing API URLs, only refactor internal structure.”
+* “Keep using MySQL, do not suggest MongoDB.”
+* “We must run on a single small VPS; avoid heavy tooling.”
+* “Do not introduce new external libraries unless really needed.”
+
+Sample prompt addition:
+
+```text
+Constraints:
+- Keep the public API paths and request/response bodies exactly the same.
+- Only internal code structure may be changed.
+- Do not introduce any new third-party dependencies.
+```
+
+This keeps Codex practical for real production situations.
+
+---
+
+## 10. Summary Checklist: How to Ask Codex to Improve Designs
+
+When you want Codex to improve a design, make sure your prompt includes:
+
+1. **Context**
+
+   * What is this system? (e.g., “small e-commerce app using FastAPI + MySQL”).
+
+2. **Current State**
+
+   * Folder tree, schema, endpoint list, or sample files.
+
+3. **Problems**
+
+   * “Too messy,” “hard to extend,” “duplicate logic,” etc.
+
+4. **Goal**
+
+   * Cleaner structure, better scaling, clearer APIs, normalized schema, etc.
+
+5. **Constraints**
+
+   * Keep APIs unchanged, keep tech stack same, no new libraries, etc.
+
+6. **Task**
+
+   * Exact output you want: new structure proposal, refactored file, SQL schema, diagrams, migration steps.
+
+7. **Optional Follow-ups**
+
+   * “Now generate code for this design.”
+   * “Now write tests for new structure.”
+   * “Now create documentation/README describing the new design.”
+
 
