--- a/GraphQL/p10.md
+++ b/GraphQL/p10.md
@@ -5,28 +5,27 @@
 
 ## 1. Introduction
 
-Setting up a GraphQL server is like opening a small help-desk counter.  
-You give the server a simple “menu” of what questions it can answer.  
-Here we will start with the smallest possible server: a **hello** message.  
-This helps you understand the basic structure before adding real features.  
-You can build this in either **Node.js (Apollo Server)** or **Python (Graphene/Ariadne)**.
+- Setting up a GraphQL server is like opening a small help-desk counter.  
+- You give the server a simple “menu” of what questions it can answer.  
+- Here we will start with the smallest possible server: a **hello** message.  
+- This helps you understand the basic structure before adding real features.  
+- You can build this in either **Node.js (Apollo Server)** or **Python (Graphene/Ariadne)**.
 
 ---
 
 ## 2. Why This Matters
 
-A GraphQL server is the centre point of your app.  
-All frontends talk to this single place to get exactly the data they want.  
-If the server is easy to set up, developers can experiment faster.  
-Once this foundation is ready, you can plug in databases, microservices, and more.
+- A GraphQL server is the centre point of your app.  
+- All frontends talk to this single place to get exactly the data they want.  
+- If the server is easy to set up, developers can experiment faster.  
+- Once this foundation is ready, you can plug in databases, microservices, and more.
 
 ---
 
 ## 3. Real-Life Example
 
-Think of a **reception desk** in a hospital.  
-Before you expand it into many counters and departments,  
-you first set up a simple desk with one job:  
+- Think of a **reception desk** in a hospital.  
+- Before you expand it into many counters and departments, you first set up a simple desk with one job:  
 **“Say hello to the visitor.”**
 
 This small beginning helps you understand the structure before adding complexity.
